Improved wording of success message

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<% if (BITBUCKET_USERNAME && BITBUCKET_PASSWORD) { %>
-						<div class="alert alert-success" role="alert">App is running and configured correctly!</div>
+						<div class="alert alert-success" role="alert">App is running and Bitbucket credentials are set!</div>
 					<% } else { %>
 						<div class="alert alert-warning" role="alert">App is running, but missing required configuration!</div>
 					<% } %>
