Added my name to footer in status page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
 				</div>
 			</div>
 		</nav>
+		
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
@@ -85,6 +86,17 @@
 						</li>
 						<li>Now whenever a pull request is created, it should (almost instantly) get updated to have the Codeship Status widget in the description.</li>
 					</ol>
+				</div>
+			</div>
+			
+			<hr>
+			
+			<div class="row">
+				<div class="col-xs-12 text-center">
+					<p class="text-muted">
+						Created by <a href="https://twitter.com/Chesley">@Chesley</a><br>
+						<a href="http://chesleybrown.ca">chesleybrown.ca</a>
+					</p>
 				</div>
 			</div>
 		</div>
