It's called UUID, not GUID. Fixed.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,7 +80,7 @@
 						<li>
 							Add a Pull Request POST hook for Create / Edit / Merge / Decline that points to your instance of this app. The URL should look something like this:
 							<ul>
-								<li>https://bitbucket-codeship-status-example.herokuapp.com/pull-request/<span class="label label-default">CODESHIP_PROJECT_GUID</span>/<span class="label label-default">CODESHIP_PROJECT_ID</span></li>
+								<li>https://bitbucket-codeship-status-example.herokuapp.com/pull-request/<span class="label label-default">CODESHIP_PROJECT_UUID</span>/<span class="label label-default">CODESHIP_PROJECT_ID</span></li>
 								<li>Which would look something like this: <a href="#">https://bitbucket-codeship-status-example.herokuapp.com/pull-request/ee1399cc-b740-43da-812f-d17901f9efa7/52132</a></li>
 							</ul>
 						</li>
