Typo fixes in setup instructions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,8 +75,8 @@
 				<div class="col-xs-12">
 					<h3>Setup</h3>
 					<ol>
-						<li>Create an API Key for your team and use your team name as the username and the API Key as your password in the next step.</li>
-						<li>Set <span class="label label-default">BITBUCKET_USERNAME</span> and <span class="label label-default">BITBUCKET_PASSWORD</span> ENV variables match with the username and password above.</li>
+						<li>Create an API Key in Bitbucket for your team and use your team name as the username and the API Key as your password in the next step.</li>
+						<li>Set <span class="label label-default">BITBUCKET_USERNAME</span> and <span class="label label-default">BITBUCKET_PASSWORD</span> ENV variables to match with the username and password above.</li>
 						<li>
 							Add a Pull Request POST hook for Create / Edit / Merge / Decline that points to your instance of this app. The URL should look something like this:
 							<ul>
