--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,9 @@
 						<% } else { %>
 							<span class="label label-danger">Missing</span>
 						<% } %>
+						<div class="visible-xs">
+							<br>
+						</div>
 						BITBUCKET_USERNAME
 					</h4>
 				</div>
@@ -57,6 +60,9 @@
 						<% } else { %>
 							<span class="label label-danger">Missing</span>
 						<% } %>
+						<div class="visible-xs">
+							<br>
+						</div>
 						BITBUCKET_PASSWORD
 					</h4>
 				</div>
