Updated logo to have "status" in it

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,8 @@
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="container-fluid">
 				<div class="text-center">
-					<p class="visible-xs"><img src="media/logo-small.png" alt="bitbucket-codeship-status logo"></p>
-					<h1><img class="hidden-xs" src="media/logo-small.png" alt="bitbucket-codeship-status logo"> bitbucket-codeship-status</h1>
+					<p class="visible-xs"><img src="media/logo.png" alt="bitbucket-codeship-status logo" style="height: 64px;"></p>
+					<h1><img class="hidden-xs" src="media/logo.png" alt="bitbucket-codeship-status logo" style="height: 64px;"> bitbucket-codeship-status</h1>
 				</div>
 			</div>
 		</nav>
