Fixed hardcoded username

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,7 @@
 				</div>
 				<div class="col-md-6">
 					<% if (BITBUCKET_USERNAME) { %>
-						<h4><small>Set to <span class="label label-default">bitbucket_username</span>.</small></h4>
+						<h4><small>Set to <span class="label label-default"><%= BITBUCKET_USERNAME %></span>.</small></h4>
 					<% } else { %>
 						<h4><small>You still need to set the <span class="label label-default">BITBUCKET_USERNAME</span> ENV variable.</small></h4>
 					<% } %>
